src/ntfy/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: ntfy
spec:
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
      - name: ntfy
        image: binwiederhier/ntfy
        args: ["serve"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: etc
          mountPath: "/etc/ntfy"
        - name: lib
          mountPath: "/var/lib/ntfy"
        - name: cache
          mountPath: "/var/cache/ntfy"
      volumes:
        - name: etc
          nfs:
            server: nas.lan
            path: /volume1/k3s/ntfy/config
        - name: lib
          nfs:
            server: nas.lan
            path: /volume1/k3s/ntfy/lib
        - name: cache
          nfs:
            server: nas.lan
            path: /volume1/k3s/ntfy/cache
