src/ntfy/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy-svc
  namespace: ntfy
spec:
  selector:
    app: ntfy
  ports:
  - port: 80
    targetPort: 80
