src/ntfy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy-ingress
  namespace: ntfy
  annotations:
    kubernetes.io/ingress.className: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: ntfy.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: ntfy-svc
            port:
              number: 80
  tls:
    - hosts:
      - ntfy.lan
      secretName: ntfy-tls-secret
